[package]
name = "neosh"
version = "0.1.0"
edition = "2018"
authors = ["NTBBloodBath", "Shift", "Vhyrro"]
description = "A next-gen shell for modern systems"
repository = "https://github.com/neo-sh/neosh"
homepage = "https://github.com/neo-sh/neosh"
license = "GPL-3.0"
readme = "README.md"
include = ["src/*", "Cargo.*", "README.md", "LICENSE"]

[dependencies]
dirs = "4.0.0"
whoami = "1.2.0"
rustyline = "9.0.0"

[dependencies.mlua]
version = "0.6.6"
features = ["vendored", "luajit"]
