[package]
name = "neosh"
version = "0.1.0"
edition = "2018"
authors = ["NTBBloodBath", "Shift", "Vhyrro"]
description = "A next-gen shell for modern systems"
repository = "https://github.com/neo-sh/neosh"
homepage = "https://github.com/neo-sh/neosh"
license = "GPL-3.0"
readme = "README.md"
include = ["src/*", "Cargo.*", "README.md", "LICENSE"]

[dependencies]
dirs = "4.0.0"                    # Crossplatform directories manipulation
whoami = "1.2.0"                  # Utils for fetching user data
rustyline = "9.0.0"               # Read user input
tracing = "0.1.29"                #
tracing-appender = "0.2.0"        # Logging
peg = "0.7.0"                     # Parsing

[dependencies.mlua]               # Lua interpreter
version = "0.6.6"                 #
features = ["vendored", "luajit"] # Build LuaJIT on `cargo build`

[dependencies.tracing-subscriber] # Logging subscriber
version = "0.3.3"                 #
features = ["fmt", "env-filter"]  #
