[package]
name = "neosh"
version = "0.1.0"
edition = "2018"
authors = ["Shift", "Vhyrro"]
description = "A next-gen shell for modern systems"
repository = "https://github.com/neo-sh/neosh"
homepage = "https://github.com/neo-sh/neosh"
license = "GPL-3.0"
readme = "README.md"
include = ["src/*", "Cargo.*", "README.md", "LICENSE"]

[dependencies]
dirs = "4.0.0"                      # Crossplatform directories manipulation
whoami = "1.2.0"                    # Utils for fetching user data
crossterm = "0.22.1"                # User input handler
tracing = "0.1.29"                  #
tracing-appender = "0.2.0"          # Logging

[target.'cfg(target_os = "windows")'.dependencies.mlua]
version = "0.6.6"                   # Lua interpreter for Windows
features = ["vendored", "luajit"]   # Build LuaJIT on `cargo build`

[target.'cfg(not(target_os = "windows"))'.dependencies.mlua]
version = "0.6.6"                   # Lua interpreter not for Windows
features = ["luajit"]               # Build LuaJIT on `cargo build`

[dependencies.tracing-subscriber]   # Logging subscriber
version = "0.3.3"                   #
features = ["fmt", "env-filter"]    #

[dependencies.miette]               # Error handling lib
version = "4.2.1"                   #
features = ["fancy"]                # Enable fancy output

[profile.optimized]                 # Size optimizations that will hurt build speed
inherits = "release"                # Which profile we inherit
opt-level = "z"                     # Optimize for size
codegen-units = 1                   # Build speed -> Executable size
strip = true                        # Remove debug symbols
